# salsa

./: Cargo.toml
components/salsa-consumer-mock/: Cargo.toml
components/salsa-consumer-mock/src/: db.rs  error.rs  jar0.rs  lexer.rs  lib.rs  main.rs  parser.rs
components/salsa-consumer-mock/src/jar0/: main.rs
components/salsa-consumer-mock/src/lexer/: text.rs  token_tree.rs
components/salsa-entity-macros/src/: accumulator.rs  component.rs  configuration.rs  data_item.rs  db.rs  entity.rs  entity2.rs  interned.rs  jar.rs  lib.rs  memoized.rs  options.rs
components/salsa-entity-mock/: Cargo.toml
components/salsa-entity-mock/src/: accumulator.rs  cycle.rs  database.rs  debug.rs  entity.rs  function.rs  hash.rs  id.rs  ingredient.rs  interned.rs  jar.rs  key.rs  lib.rs  main.rs  routes.rs  runtime.rs  salsa.rs  storage.rs  user_crate.rs
components/salsa-entity-mock/src/function/: accumulated.rs  backdate.rs  execute.rs  fetch.rs  maybe_changed_after.rs  memo.rs  set.rs  store.rs  sync.rs
components/salsa-entity-mock/src/runtime/: active_query.rs  dependency_graph.rs  local_state.rs  shared_state.rs
components/salsa-macros/src/: database_storage.rs  query_group.rs
src/: accumulator.rs  alloc.rs  database_key_index_map.rs  derived.rs  function.rs  ingredient.rs  input.rs  interned.rs  key.rs  lib.rs  lru.rs  plumbing.rs  runtime.rs  storage.rs  table.rs  tracked_struct.rs
src/derived/: execute.rs  fetch.rs  key_to_key_index.rs  slot.rs
src/function/: diff_outputs.rs
src/input/: input_field.rs
src/tracked_struct/: tracked_field.rs
tests/: cycles.rs
(+15 files in other folders)
