[package]
name = "salsa"
version = "0.12.3"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/salsa-rs/salsa"
description = "A generic framework for on-demand, incrementalized computation (experimental)"
readme = "README.md"

[dependencies]
arc-swap = "0.3"
derive-new = "0.5.5"
indexmap = "1.0.1"
linked-hash-map = "0.5.2"
lock_api = "0.2.0"
log = "0.4.5"
parking_lot = "0.8.0"
rustc-hash = "1.0"
smallvec = "0.6.5"
salsa-macros = { version = "0.12.1", path = "components/salsa-macros" }

[dev-dependencies]
diff = "0.1.0"
env_logger = "0.5.13"
rand = "0.5.5"

[workspace]
